<resources>
    <string name="app_name">Assignment05</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_user_info_label">Create User Info</string>
    <string name="enter_name_label">Enter Name</string>
    <string name="enter_email_label">Enter Email</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="role_label">Role:</string>
    <string name="income_label">Income:</string>
    <string name="status_label">Status:</string>
    <string name="n_a_label">N/A</string>
    <string name="select_label">Select</string>
    <string name="next_label">Next</string>
    <string name="close_label">Close</string>
    <string name="profile_label">Profile</string>
    <string name="submit_label">Submit</string>
    <string name="living_text_label">Which of the following describes the living status?</string>
    <string name="select_living_status_label">Select Living Status</string>
    <string name="home_owner_label">Home Owner</string>
    <string name="renter_label">Renter</string>
    <string name="lessee_label">Lessee</string>
    <string name="other_label">Other</string>
    <string name="prefer_not_to_say_label">Prefer not to say</string>
    <string name="cancel_label">Cancel</string>
    <string name="student_label">Student</string>
    <string name="employee_label">Employee</string>
    <string name="select_role_label">Select Role</string>
    <string name="welcome_label">Welcome !!</string>
    <string name="start_label">Start</string>
    <string name="select_household_income_label">Select Household Income</string>
</resources>